<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:gravity="center"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:background="@drawable/background"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="93dp"
        app:srcCompat="@drawable/profile" />

    <EditText
        android:id="@+id/edtTenDangNhap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ten_dang_nhap"
        />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        />
    <EditText
        android:id="@+id/edtMatKhau"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mat_khau"
        />

    <EditText
        android:id="@+id/edtXacNhanMatKhau"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/xac_nhan_mat_khau"
        />

    <Button
        android:id="@+id/btnDangKi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/buttonclick"
        android:onClick="DangKy"
        android:text="@string/dang_ky"
        android:textColor="#EDF1EAEA" />

</LinearLayout>